package com.wq.entity.protobuf.server;
import "proto/Protocol.proto";

message WorldLoginReq{
	
}

message WorldLoginRes{
	required int32 serverId = 1;
	optional string name = 2;
	optional int32 type = 3;
	optional string ip = 4;
	optional int32 port = 5;
	optional int32 onlineCount = 6;
	optional int64 updateTime = 7;
}

extend protocol{
	optional WorldLoginReq worldLoginReq = 100;
	optional WorldLoginRes worldLoginRes = 101;
}